# csgy-9163-unit2-spell-webapp

./: .dockerignore  .env  .flaskenv  .gitmodules  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  README.md  app-deployment.yaml  app-service.yaml  app.py  docker-compose.yml  requirements.txt  setup.cfg  setup.py  sqlite-pv.yaml  tox.ini
app/: __init__.py  app.py  auth.py  extensions.py  forms.py  history.py  input.txt  models.py  settings.py  spell.py
app/lib2/spell_check/: CMakeLists.txt  README.md
app/lib2/spell_check/cmake/: FindCheck.cmake  config.h.in
app/lib2/spell_check/res/: one_bucket.txt
app/lib2/spell_check/src/: CMakeLists.txt  main.c  spell.c  spell.h
app/lib2/spell_check/tests/: CMakeLists.txt  test_spell.c
app/static/css/: style.css
app/templates/: base.html
app/templates/auth/: register.html
app/templates/history/: auth_history.html  history.html  item.html
secrets/: admin-secret.yaml  key-secret.yaml  user-secret.yaml
spellr/: __init__.py  auth.py  db.py  extensions.py  forms.py  history.py  models.py  permissions.py  schema.sql  spell.py  spell_check  util.py
spellr/static/css/: style.css
spellr/templates/: base.html
spellr/templates/auth/: login.html  register.html
spellr/templates/history/: history.html
spellr/templates/spell/: index.html
tests/: conftest.py  data.sql  test_auth.py  test_db.py  test_factory.py  test_history.py  test_models.py  test_spell.py  test_util.py
